Use Kirill's new Substance reboot instead of older Insubstantial.  Add process to generate application for Windows with Java 11 tools (jdeps, jlink) rather than rely on a pre-installed JRE on Windows